--- a/assets/style.css
+++ b/assets/style.css
@@ -78,11 +78,11 @@ body{font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;font-si
 	margin-top: 10px;
 }
 
-#simulate{	
+#help{	
 	padding: 5px 10px 10px 10px;
 	background-color: #337ab7;
 }
-#create{
+#next{
 	padding: 5px 10px 10px 10px;
 	background-color: #f0ad4e;
 }
